# veda-node-queue-consumer

./: .eslintrc.js  .eslintrc.json  .gitignore  .options.js  Cargo.toml  Consumer.js  QueueConsumer.js  QueueFeeder.js  QueueModule.js  README.md  clear-queue.sh  example.js  index.js  options.json  package.json  queue-test.js  test1.js  test2.js  veda-node-queue-consumer.geany
doc/: API.md  Architecture.md  Configuration.md  Examples.md  FAQ.md  Installation.md  Overview.md  QuickStart.md  README.md
src/: bind.rs  common.rs  lib.rs
test/: .options.js  index.js  options.json  test1.js  test2.js  test3.js  test4.js
test/big/: .options.js  index.js  test1.js  test2.js
test/big/queue/: individuals-flow_info_pop_test1  individuals-flow_info_pop_test2  individuals-flow_info_queue
test/big/queue/individuals-flow-0/: individuals-flow_info_push
test/big/queue/individuals-flow-1/: individuals-flow_info_push  individuals-flow_queue
test/big/queue/individuals-flow-10/: individuals-flow_info_push  individuals-flow_queue
test/big/queue/individuals-flow-11/: individuals-flow_info_push  individuals-flow_queue
test/big/queue/individuals-flow-13/: individuals-flow_info_push  individuals-flow_queue
test/big/queue/individuals-flow-14/: individuals-flow_info_push  individuals-flow_queue
test/big/queue/individuals-flow-15/: individuals-flow_info_push  individuals-flow_queue
test/small/: .options.js  index.js  test1.js  test2.js  test3.js
test/small/queue/: test_info_pop_test1  test_info_pop_test2  test_info_pop_test3  test_info_queue
(+60 files in other folders)
