[package]
name = "veda-node-queue-consumer"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.7.0"
v_queue = "=0.2.1"
#v_queue = { package = "v_queue", path = "../v-queue" }

v_common = { package = "v-common", version = "0.1.97" }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
